bad/incr_method_call_class.example_compiler_output
ERROR
[1mbad/incr_method_call_class.lat:9:15: [1;31merror: [0;1mexpression is not assignable[m
	(new M).foo()++;
	             [1;32m^[m
[1mbad/incr_method_call_class.lat:9:2: [1;34mnote: [0;1mexpression starts here[m
	(new M).foo()++;
	[1;32m^[m
